READY FOR REVIEW resolved_files_folders_os_need

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "693d974e-b7b9-4d33-8ce2-e2fb92247f8a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "ce1f1942-d8a7-4a2d-8d3f-2a400ee2b660",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\tangy\\\\OneDrive\\\\Desktop\\\\GitHub\\\\learning-portfolio-2024-aug-yeeyinnn\\\\6.2_files,_folders_&_os__exercises'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "id": "dad1f78e-49f3-4532-8005-93364ffff8eb",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "f55590b4-05fe-4a36-8f5f-8d71459ab157",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "2deadaa0-0c66-4d92-9a3f-6fd33285ea24",
    "metadata": {},
    "outputs": [
@@ -138,13 +138,12 @@
     "    'oct': '10', 'nov': '11', 'dec': '12'\n",
     "    }\n",
     "    \n",
-    "    a = old_file_name.split('-')\n",
+    "    old_name2 = old_file_name.split('-')\n",
     "\n",
-    "    if not a[0].isdigit():\n",
-    "        a[0] = months[a[0]]\n",
-    "    b = [a[0]] + a[1].split('_')\n",
-    "    c = '-'.join(b)\n",
-    "    return c\n",
+    "    if not old_name2[0].isdigit():\n",
+    "        old_name2[0] = months[old_name2[0]]\n",
+    "        old_name3 = [old_name2[0]] + old_name2[1].split('_')\n",
+    "    return '-'.join(old_name3)\n",
     "\n",
     "print(rename_my_file('oct-08_singapore.txt') )"
    ]
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "e0b267fa-c981-45ab-9668-4a0006af5694",
    "metadata": {},
    "outputs": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "1db45bf2-0465-41a1-ac8f-00407ab27cd3",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "f16d0a5a-3e38-411d-b1f9-dd0caa7cccbb",
    "metadata": {},
    "outputs": [],
@@ -1571,7 +1570,8 @@
     "\n",
     "for i in City:\n",
     "    path = os.path.join('os-collaboration-exercise-data',i)\n",
-    "    os.mkdir(path)"
+    "    if not os.path.exists(path):\n",
+    "        os.mkdir(path)"
    ]
   },
   {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "627979f7-02c3-4794-9a3b-c50efd4fb661",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1594,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,32 +1605,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "id": "cb555a4f-86a1-4128-b208-57337cd5ae6d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'os-collaboration-exercise-data\\\\Cairo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     final_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mos-collaboration-exercise-data\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCairo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m     file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mos-collaboration-exercise-data\u001b[39m\u001b[38;5;124m'\u001b[39m, i\u001b[38;5;241m.\u001b[39msplit(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39msep)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mshutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfinal_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Although here shows error, the files did copied to the folder :)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Why there is error here?\u001b[39;00m\n",
-      "File \u001b[1;32m~\\miniconda3\\Lib\\shutil.py:435\u001b[0m, in \u001b[0;36mcopy\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    433\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(dst):\n\u001b[0;32m    434\u001b[0m     dst \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dst, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(src))\n\u001b[1;32m--> 435\u001b[0m \u001b[43mcopyfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdst\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfollow_symlinks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfollow_symlinks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    436\u001b[0m copymode(src, dst, follow_symlinks\u001b[38;5;241m=\u001b[39mfollow_symlinks)\n\u001b[0;32m    437\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dst\n",
-      "File \u001b[1;32m~\\miniconda3\\Lib\\shutil.py:260\u001b[0m, in \u001b[0;36mcopyfile\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    258\u001b[0m     os\u001b[38;5;241m.\u001b[39msymlink(os\u001b[38;5;241m.\u001b[39mreadlink(src), dst)\n\u001b[0;32m    259\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 260\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m fsrc:\n\u001b[0;32m    261\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    262\u001b[0m             \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(dst, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fdst:\n\u001b[0;32m    263\u001b[0m                 \u001b[38;5;66;03m# macOS\u001b[39;00m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'os-collaboration-exercise-data\\\\Cairo'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cairo_files = glob.glob('os-collaboration-exercise-data/*cairo*')\n",
     "for i in cairo_files:\n",
-    "    final_path = os.path.join('os-collaboration-exercise-data','Cairo')\n",
-    "    file_path = os.path.join('os-collaboration-exercise-data', i.split(os.path.sep)[-1])\n",
-    "    shutil.copy(file_path,final_path)\n",
-    "# Although it shows PermissionError, the files did copied to the folder :)\n",
-    "# Why there is error here?"
+    "    try: \n",
+    "        final_path = os.path.join('os-collaboration-exercise-data','Cairo')\n",
+    "        file_path = os.path.join('os-collaboration-exercise-data', i.split(os.path.sep)[-1])\n",
+    "        shutil.copy(file_path,final_path)\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -1643,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 42,
    "id": "f3a485e5-57e7-41d7-b077-a8266e8d859c",
    "metadata": {},
    "outputs": [
